# internal/api/http/v1routes/internal/dummy_message_validation.go
@@ -11,18 +11,11 @@ import (
 var _ = time.Time{}
 
 func NewDummyMessageValidator() FieldValidator[*DummyMessage] {
-	validateId := NewSimpleFieldValidator[string](
+	validateMessage := NewSimpleFieldValidator[string](
 		EnsureNonDefault[string],
-	)
-	validateName := NewSimpleFieldValidator[string](
-		EnsureNonDefault[string],
-	)
-	validateComments := NewSimpleFieldValidator[string](
 	)
 	
 	return func(bindingCtx *BindingContext, value *DummyMessage) {
-		validateId(bindingCtx.Fork("id"), value.Id)
-		validateName(bindingCtx.Fork("name"), value.Name)
-		validateComments(bindingCtx.Fork("comments"), value.Comments)
+		validateMessage(bindingCtx.Fork("message"), value.Message)
 	}
 }
